--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,10 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//web 라이브러리 추가
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'javax.inject:javax.inject:1'
 
 	//lombok 라이브러리 추가 시작
 	compileOnly 'org.projectlombok:lombok'
